# instant-messaging-service

./: .example.env  README.md  alembic.ini  pyproject.toml
app/adapters/sqlalchemy_db/gateway/: gateway.py  message_sql_gateway.py  user_sql_gateway.py
app/adapters/sqlalchemy_db/migrations/: env.py
app/adapters/sqlalchemy_db/migrations/versions/: 20241021-105044_b7827b6d49db_init.py  20241021-105211_1fe94d5b53ae_init2.py  20241021-105544_fd9f3598b9a3_init2.py  20241022-115042_214d855249bf_init3.py  20241023-095206_4ad914cd1b79__.py  20241023-111418_a47611c93339_change_field_name.py  20241023-111854_54ae7b835268_change_field_name.py  20241023-165209_8bcd5d07c380___.py  20241023-201141_e76b2020de45_telegram_user_id_nullable_false.py  20241024-105859_41f926c7ebbd_telegram_user_id_nullable_false.py  20241024-152905_8477d6e7387c_init.py
app/adapters/sqlalchemy_db/models/: __init__.py  message.py  user.py
app/adapters/sqlalchemy_db/models/auth/: user.py
app/adapters/sqlalchemy_db/models/chat/: __init__.py  message.py
app/api/: auth.py  chat.py  index.py  root.py
app/application/auth/: auth_backend.py  fastapi_users.py  user_manager.py
app/application/chat/: chat.py  connection_manager.py
app/application/index/: index.py
app/application/models/auth/: user.py
app/application/protocols/database/: database_gateway.py  message_database_gateway.py  uow.py  user_database_gateway.py
app/main/: bot.py  celery_app.py  di.py
app/templates/: login.html
templates/: chat.html  login.html  logout.html  register.html  users_list.html
tests/: test_generator.py
