[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["imaanick <nickolaytrusov01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.2"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}
aiosqlite = "^0.20.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
alembic = "^1.13.3"
pytest = "^8.3.3"
httpx = "^0.27.2"
jinja2 = "^3.1.4"
websockets = "^13.1"
celery = "^5.4.0"
redis = "^5.1.1"
aiogram = "^3.13.1"
requests = "^2.32.3"
asgiref = "^3.8.1"
flower = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
